// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should do the initial traversal correctly 1`] = `
Object {
  "dependencies": Map {
    "/bundle" => Object {
      "dependencies": Map {
        "foo" => Object {
          "absolutePath": "/foo",
          "data": Object {
            "data": Object {
              "isAsync": false,
            },
            "name": "foo",
          },
        },
      },
      "getSource": [Function],
      "inverseDependencies": Set {},
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/bundle",
    },
    "/foo" => Object {
      "dependencies": Map {
        "bar" => Object {
          "absolutePath": "/bar",
          "data": Object {
            "data": Object {
              "isAsync": false,
            },
            "name": "bar",
          },
        },
        "baz" => Object {
          "absolutePath": "/baz",
          "data": Object {
            "data": Object {
              "isAsync": false,
            },
            "name": "baz",
          },
        },
      },
      "getSource": [Function],
      "inverseDependencies": Set {
        "/bundle",
      },
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/foo",
    },
    "/bar" => Object {
      "dependencies": Map {},
      "getSource": [Function],
      "inverseDependencies": Set {
        "/foo",
      },
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/bar",
    },
    "/baz" => Object {
      "dependencies": Map {},
      "getSource": [Function],
      "inverseDependencies": Set {
        "/foo",
      },
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/baz",
    },
  },
  "entryPoints": Array [
    "/bundle",
  ],
}
`;

exports[`should not traverse past the initial module if \`shallow\` is passed 1`] = `
Object {
  "dependencies": Map {
    "/bundle" => Object {
      "dependencies": Map {
        "foo" => Object {
          "absolutePath": "/foo",
          "data": Object {
            "data": Object {
              "isAsync": false,
            },
            "name": "foo",
          },
        },
      },
      "getSource": [Function],
      "inverseDependencies": Set {},
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/bundle",
    },
  },
  "entryPoints": Array [
    "/bundle",
  ],
}
`;
